[gd_scene load_steps=2 format=3 uid="uid://bal8erhwgntb8"]

[ext_resource type="Script" uid="uid://shflsw5r0jbj" path="res://InputMachines/computer_input.gd" id="1_a4hav"]

[node name="ComputerInput" type="Node"]
script = ExtResource("1_a4hav")

[node name="ReactionTimer" type="Timer" parent="."]

[node name="InputTimer" type="Timer" parent="."]
